August and September

--- a/index.html
+++ b/index.html
@@ -214,6 +214,46 @@
 						<li><a href="./pages/july30.html" class="button">Full Story</a></li>
 					</ul>
 				</article>
+				<article>
+					<header>
+						<span class="date">August 30, 2025</span>
+						<h2><a>Our First Wedding Together<br />; A Day to Remember</a></h2>
+					</header>
+					<a class="image fit"><img src="./images/august30/image138.jpeg" alt="" /></a>
+					<p>For our 8th monthsary, we celebrated a little differently we attended the wedding of your
+						friend’s brother.
+						It was actually the first wedding I ever went to from the church ceremony all the way to the
+						reception.
+						Sitting beside you through the vows, the music, and the laughter at the reception made the day
+						feel extra special.
+						It wasn’t just a wedding we witnessed, it felt like a glimpse of what love could look like for
+						us in the future.
+						Another beautiful memory for our story.</p>
+					<ul class="actions special">
+						<li><a href="./pages/august30.html" class="button">Full Story</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">September 30, 2025</span>
+						<h2><a>From Weddings to Baptisms<br />; A Journey Through Life Together</a></h2>
+					</header>
+					<a class="image fit"><img src="./images/september30/image142.jpeg" alt="" /></a>
+					<p>For our 9th monthsary, life gave us another beautiful event to share, we attended the baptism of
+						your friend’s
+						child. From witnessing a wedding last month to celebrating a baptism this month, it felt like we
+						were
+						experiencing the circle of life together, one chapter at a time. ❤️
+						It’s heartwarming to see love, family, and new beginnings unfolding right in front of us, and
+						even more special
+						because we were there, side by side. These little moments remind me how blessed I am to be
+						walking through all
+						of life’s milestones with you. Another memory added to our growing story, and I can’t wait for
+						what’s next. 🥰</p>
+					<ul class="actions special">
+						<li><a href="./pages/september30.html" class="button">Full Story</a></li>
+					</ul>
+				</article>
 
 				<!-- <article>
 					<header>
