--- a/pages/myLetters.html
+++ b/pages/myLetters.html
@@ -128,8 +128,22 @@
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
-                    <a class="image fit"><img src="../images/commingsoon.jpg" alt="" /></a>
+                    <a class="image fit"><img src="../images/monthsary8.png" alt="" /></a>
                     <h3>August 30, 2025</h3>
+                    <ul class="actions">
+                        <li><a href="./letters/letterAug30.html" class="button protected-letter">Read Letter</a></li>
+                    </ul>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a class="image fit"><img src="../images/monthsary9.png" alt="" /></a>
+                    <h3>September 30, 2025</h3>
+                    <ul class="actions">
+                        <li><a href="./letters/letterSep30.html" class="button protected-letter">Read Letter</a></li>
+                    </ul>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a class="image fit"><img src="../images/commingsoon.jpg" alt="" /></a>
+                    <h3>October 30, 2025</h3>
                     <ul class="actions">
                         <li><a class="button">Comming Soon...</a></li>
                     </ul>
