--- a/pages/august30.html
+++ b/pages/august30.html
@@ -99,7 +99,7 @@
                     your
                     “dragon” moments are part of what makes us *us.*</p>
 
-                <div class="image main"><img src="../images/august30/image141.jpeg" alt="" /></div>
+                <div class="image main"><img src="../images/august30/image141.jpg" alt="" /></div>
 
                 <p>Here’s to more months. More little battles. More sweet recoveries. More future plans. And more of me
                     waiting
